feat: Add Gemini CLI documentation page and update navigation.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -124,6 +124,7 @@ nav:
       - Coding Agents:
           - Overview: development-tools/coding-agents/index.md
           - Antigravity: development-tools/coding-agents/antigravity.md
+          - Gemini CLI: development-tools/coding-agents/gemini_cli.md
           - Claude Code: development-tools/coding-agents/claude-code.md
 
 # Development server
