--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -124,7 +124,7 @@ nav:
       - Coding Agents:
           - Overview: development-tools/coding-agents/index.md
           - Antigravity: development-tools/coding-agents/antigravity.md
-          - Gemini: development-tools/coding-agents/gemini.md
+          - Gemini:
             - Overview: development-tools/coding-agents/gemini/index.md
             - Autenticazione: development-tools/coding-agents/gemini/auth.md 
             - Quota e Pricing: development-tools/coding-agents/gemini/quotas_and_pricing.md
