feat: Add NotebookLM documentation and a file watching utility, update MkDocs navigation, and revise authentication overview.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -142,5 +142,8 @@ nav:
       - Overview: authentication/index.md
       - Microsoft Entra ID: 
         - Overview: authentication/microsoft_entra_id/index.md
-        - Integrazione Athena con Entra ID: authentication/microsoft_entra_id/integrazione_athena_con_entra_id.md
+        - Integrazione Athena con Entra ID: authentication/microsoft_entra_id/Integrazione_athena_con_entra_ID.md
+  - Tools:
+      - NotebookLM: tools/notebooklm/index.md
 dev_addr: 0.0.0.0:8545
+
