--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 mkdocs>=1.6
-mkdocs-material>=9.7
-mkdocs-minify-plugin>=0.8
+mkdocs-material==9.6.16
+
+pymdown-extensions==10.16
+
+watchdog>=6.0.0
